log/build_2024-10-15_06-10-26/my_python_node/stderr.log
  File "/home/zxq/laser_ws/install/my_python_node/lib/python3.10/site-packages/my_python_node/listener.py", line 117
    break    
    ^^^^^
SyntaxError: 'break' outside loop

